--- a/Config/DefaultGame.ini
+++ b/Config/DefaultGame.ini
@@ -37,6 +37,11 @@ bNativizeBlueprintAssets=False
 bNativizeOnlySelectedBlueprints=False
 
 [/Script/AkAudio.AkSettings]
+MaxSimultaneousReverbVolumes=4
 WwiseProjectPath=(FilePath="UjuComics_WwiseProject/UjuComics_WwiseProject.wproj")
 WwiseWindowsInstallationPath=(Path="D:/Program Files (x86)/Audiokinetic/Wwise 2018.1.2.6762")
-MaxSimultaneousReverbVolumes=4
+WwiseMacInstallationPath=(FilePath="")
+bAutoConnectToWAAPI=False
+SuppressWwiseProjectPathWarnings=False
+
+
